Add basic ir generator skeleton